<resources>
    <string name="app_name">Training App</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="empezar">Empezar</string>
    <string name="nombrerutina">Nombre Rutina</string>
    <string name="recordarme">RECORDARME</string>
    <string name="serie">Serie</string>
    <string name="nombre">Nombre</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="duracion">Duracion</string>
    <string name="semanalmente">Semanalmente</string>
    <string name="unasolavez">Una sola vez</string>
    <string name="dia0">L</string>
    <string name="dia1">M</string>
    <string name="dia2">X</string>
    <string name="dia3">J</string>
    <string name="dia4">V</string>
    <string name="dia5">S</string>
    <string name="dia6">D</string>
    <string name="fecha">FECHA</string>
    <string name="hora">HORA</string>
    <string name="nombreinvalido">Nombre Invalido</string>
    <string name="ingresardia">Debe seleccionar algun dia</string>
    <string name="ingresarfechahora">Debe ingresar fecha y hora a futuro</string>
    <string name="error">Error</string>
    <string name="eliminarrutina">Eliminar Rutina</string>
    <string name="deseaeliminar">¿Desea eliminar la rutina?</string>
    <string name="repinvalido">Numero de repeticiones invalido</string>
    <string name="tiempoinvalido">Formato de tiempo invalido</string>
    <string name="descanso">Descanso</string>
    <string name="editarejercicio">Editar Ejercicio</string>
    <string name="agregarejercicio">Agregar Ejercicio</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="tocacomenzar">Toca para comenzar</string>
    <string name="tocaver">Toca para ver</string>
    <string name="posponer30">Posponer 30 min</string>
    <string name="posponer1">Posponer 1 hora</string>
    <string name="finalizado">Finalizado</string>
    <string name="salir">Salir</string>
    <string name="siguiente">Siguiente</string>
    <string name="tiempo">Tiempo</string>
    <string name="saltar">Saltar</string>
    <string name="porrepeticiones">Por Repeticiones</string>
    <string name="portiempo">Por Tiempo</string>
    <string name="editar">Editar</string>
    <string name="duracioninvalida">Tiempo de duracion debe ser mayor a 0</string>
    <string name="vuelta">Vuelta</string>
</resources>
