<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinDialEjerTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtDialEjerNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/alternategothic"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtDialEjerRepeticiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/alternategothic"
        android:hint="@string/repeticiones"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtDialEjerDuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/alternategothic"
        android:hint="@string/duracion"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="#000000"
        android:textSize="20dp"
        android:visibility="gone" />
</LinearLayout>