<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activityVerRutina.VerRutinaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMargin="4dp"
        app:titleTextAppearance="@style/titulo"
        app:titleTextColor="#000000" />

    <TextView
        android:id="@+id/txtVerRutNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alternategothic"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/btnVerRutEjercicios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alternategothic"
        android:onClick="verEjercicios"
        android:text="@string/ejercicios"
        android:textColor="#000000"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVerRutNombre" />

    <Button
        android:id="@+id/btnVerRutEmpezar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#000000"
        android:fontFamily="@font/alternategothic"
        android:onClick="empezar"
        android:text="@string/empezar"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loutVerRutRecordar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabVerRutEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="editar"
        android:tint="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <LinearLayout
        android:id="@+id/loutVerRutRecordar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerRutEjercicios">

        <LinearLayout
            android:id="@+id/loutVerRutDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtVerRutDia0"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia0"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia1"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia1"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia2"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia3"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia3"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia4"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia4"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia5"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia5"
                android:textColor="#000000"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txtVerRutDia6"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:fontFamily="@font/alternategothic"
                android:gravity="center"
                android:text="@string/dia6"
                android:textColor="#000000"
                android:textSize="13dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtVerRutFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:fontFamily="@font/alternategothic"
            android:textSize="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtVerRutHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alternategothic"
            android:textSize="16dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabVerRutEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="eliminar"
        android:tint="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>